Fix tagline font size being too big

--- a/src/index.scss
+++ b/src/index.scss
@@ -260,7 +260,7 @@ th{
 
   div{
     margin-top: 1em;
-    font-size: 24px;
+    font-size: 22px;
   }
 
   @media screen and (max-width: $breakpoint-mobile){
